# metadrive

./: .gitignore  README.md  all_experiment_scores.json  all_experiment_scores_optuna_1.json  best_hyperparameters.json  leaky_ppo_metadrive_optuna_1.5M_best_params.json  leaky_ppo_metadrive_optuna_1.5M_study_info.json  leaky_ppo_optuna_1.5M_new_best_params.json  leaky_ppo_optuna_1.5M_new_study_info.json  main.py  optuna_experiment_results.json  optuna_experiment_results_warmstart.json  optuna_leaky_ppo_1.5M.db  optuna_leaky_ppo_1.5M_new.db  optuna_ppo_1.5M.db  optuna_ppo_1.5M_new.db  optuna_study.db  optuna_study_6M.db  optuna_visualization.py  ppo_metadrive_optuna_1.5M_best_params.json  ppo_metadrive_optuna_1.5M_study_info.json  ppo_optuna_1.5M_new_best_params.json  ppo_optuna_1.5M_new_study_info.json  pyproject.toml
src/: leaky_PPO.py
src/analyze/: plotter.py
src/experiment/: analyze_with_rliable.py  evaluate_models.py  inference.py  run_experiments.py
src/experiment/imitation/: collect_expert_data.py  eval_bc.py  replay_expert_data.py  train_bc.py  train_bc_new.py  visualize_expert_data.py
src/experiment/imitation/custom_network/: eval_bc.py
src/experiment/metadrive/: train_ppo.py
src/experiment/rl/: compare_optuna_result.py  run_experiments.py  run_experiments_parallel.py  train_ppo-OLD.py  train_ppo.py  tune_LeakyPPO_optuna.py  tune_ppo_optuna.py  tune_ppo_optuna_old.py
src/experiment/rl/analyze/: analyze_multiple_seeds.py  analyze_with_rliable.py
src/experiment/rl/optuna_tuning/: tune_LeakyPPO_optuna.py  tune_PPO_optuna.py
(+14 files in other folders)
