[project]
name = "anzz-thesis"
version = "0.1.0"
description = "Thesis project using Stable Baselines3 to train RL agents in AVs environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=0.29,<1.dev0",
    "opencv-python>=4.12.0.88",
    "stable-baselines3>=2.2.1,<2.3.dev0",
    "imitation>=1.0.1,<1.1",
    "highway-env>=1.9.1",
    "keyboard>=0.13.5",
    "wordcloud>=1.9.4",
    "wandb>=0.22.3",
    "pandas>=2.3.2",
    "metadrive-simulator @ file:/root/thesis/metadrive/",
    "np-utils>=0.6.0",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.20.0",
    "seaborn>=0.13.2",
    "rliable>=1.2.0",
    "plotly>=6.5.0",
    "kaleido>=1.2.0",
]
